10. When searching models, also search composer field.
11. Fix enabling of "Initially collapse albums" in playlists settings tab.
12. Fix grouped playlist view initial state when set to initially collapse
    albums.
13. Fix calculating size of song files when copying off a device that has been
    previously scanned, and its contents cached.

1.3.1
-----
 1. Fix collapsed context-view selector buttons text when using a dark
    background.
 2. Apply some Fedora patches.
 3. Fix MPD HTTP stream playback.
 4. Fix painting of Gtk thin scrollbar style on comboboxes.
 5. When waiting for replies from MPD, use Qt's standard timeout value of 30s.
    While the socket is still connected, Cantata will wait up to 4 times the
    timeout value. Therefore, the actual timeout has increased to 2minutes!
 6. If a sidebar view has focus, but sidebar is collapsed, then find action
    should activate playqueue search widget.
 7. FreeBSD 10 compile fixes.
 8. Fix scaling of context view background when size of view changes.
 9. Elide text of context view selector buttons, if insufficient space.
10. Only show mopidy note in copy/remove dialog if connected to mopidy.
11. Fix broken en_GB translation.
12. Fix folder-view path parsing. If two folders only differed in the last
    character then Cantata would have placed the contents of the second
    into the listing of the first.
13. Explicitly link to pthread.
14. Do not allow 'auto-hide sidebar' and 'playqueue in sidebar' to be active at
    the same time.

1.3.0.1
-------
1. Fix duplicate translations - causes KDE builds to fail.

1.3.0
-----
 1. Add option to control startup-state; visible, hidden, or remembered from
    previous run.
 2. Basic undo/redo support for playqueue.
 3. Search tab. Hidden by default, enable via settings dialog.
 4. Optionally save scaled covers (used in artist and albums views) to disk.
 5. Add option to always collapse context into single pane.
 6. Option to have small sidebar at top or bottom.