@@ -60,6 +60,8 @@
     albums.
 13. Fix calculating size of song files when copying off a device that has been
     previously scanned, and its contents cached.
+14. When copying from a CD, check that we have enough space for track that was
+    encoded with a 1:18 ratio. Just a sanity check really.
 
 1.3.1
 -----
